<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="50dp"
        android:text="@string/welcome"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:padding="15dp" />

        <EditText
            android:id="@+id/user"
            android:singleLine="true"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:padding="15dp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:padding="15dp" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="350dp"
            android:singleLine="true"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:padding="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/sub" />
	
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="15dp" >

         <Button
             android:id="@+id/submit"
             android:layout_width="225dp"
             android:layout_height="108dp"
             android:layout_gravity="center"
               android:background="@drawable/nice5"
             android:text="@string/enter" />

         <Button
             android:id="@+id/register"
             android:layout_width="225dp"
             android:layout_height="54dp"
             android:layout_gravity="center"
             android:layout_marginTop="100dp"
             android:layout_weight="0.29"
             android:background="@drawable/nice2"
             android:text="Register"
              />
     </LinearLayout>

</LinearLayout>